--- a/examples/setup/docker-rpi-provision/Makefile
+++ b/examples/setup/docker-rpi-provision/Makefile
@@ -1,8 +1,8 @@
 
-NAME="rpi-provision"
+NAME="bee42/rpi-provision"
 
 build:
     docker build -t $NAME .
 
 test:
-    docker run -it --rm $NAME 
+    docker run -it --rm $NAME
