--- a/examples/docker/rpi-java/Dockerfile.8-jre
+++ b/examples/docker/rpi-java/Dockerfile.8-jre
@@ -1,4 +1,4 @@
-FROM resin/rpi-raspbian:wheezy
+FROM resin/rpi-raspbian:jessie
 MAINTAINER Peter Rossbach <peter.rossbach@bee42.com> @PRossbach
 
 # Install dependencies
