--- a/examples/docker/rpi-maven3/Dockerfile.arg
+++ b/examples/docker/rpi-maven3/Dockerfile.arg
@@ -11,6 +11,10 @@ ENV MAVEN_VERSION=${MAVEN_VERSION:-3.3.9} \
     MAVEN_HOME=/usr/share/maven \
     USERNAME=${USERNAME:-root}
 
+RUN apt-get update \
+ && apt-get install -y curl \
+ && rm -rf /var/lib/apt/lists/*
+
 RUN export URL=https://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries && \
  curl -sSL $URL/apache-maven-$MAVEN_VERSION-bin.tar.gz \
  | tar xzf - -C /usr/share \
@@ -20,8 +24,8 @@ RUN export URL=https://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/bina
 ADD useradd.sh /usr/local/bin
 RUN /usr/local/bin/useradd.sh
 
-ADD LICENSE /etc/LICENSE.java
-RUN COPYDATE=`date  +'%Y'` && echo "bee42 java" >/etc/provisioned.java && date >>/etc/provisioned.java && echo >>/etc/provisioned.java && echo " Copyright ${COPYDATE} by <peter.rossbach@bee42.com> bee42 solutions gmbh" >>/etc/provisioned.java
+ADD LICENSE /etc/LICENSE.maven
+RUN COPYDATE=`date  +'%Y'` && echo "bee42 maven" >/etc/provisioned.maven && date >>/etc/provisioned.maven && echo >>/etc/provisioned.maven && echo " Copyright ${COPYDATE} by <peter.rossbach@bee42.com> bee42 solutions gmbh" >>/etc/provisioned.maven
 
 ENTRYPOINT ["mvn"]
 CMD ["--version"]
