Update rpi-node Dockerfiles
Signed-off-by: solidnerd <niclas@mietz.io>

--- a/examples/docker/rpi-node/latest/Dockerfile
+++ b/examples/docker/rpi-node/latest/Dockerfile
@@ -5,4 +5,4 @@ ENV NODE_VERSION=6.2.0-r0
 RUN apk update \
     && apk add ca-certificates nodejs=$NODE_VERSION
 
-ENTRYPOINT ["node"]
+CMD ["node"]
