--- a/examples/docker/rpi-node/lts/Dockerfile
+++ b/examples/docker/rpi-node/lts/Dockerfile
@@ -3,6 +3,6 @@ FROM armhf/alpine:3.4
 ENV NODE_VERSION=4.4.4-r0
 
 RUN apk update \
-    && apk add  ca-certificates nodejs-lts=$NODE_VERSION
+    && apk add ca-certificates nodejs-lts=$NODE_VERSION
 
-ENTRYPOINT ["node"]
+CMD ["node"]
