Fix node rpm start
Signed-off-by: solidnerd <niclas@mietz.io>

--- a/examples/docker/rpi-node/randomcity/package.json
+++ b/examples/docker/rpi-node/randomcity/package.json
@@ -5,7 +5,7 @@
   "main": "city.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node city.js"
+    "start": "node rcity.js"
   },
   "author": "Luc Juggery",
   "license": "ISC",
