Make whomai image size smaller
Signed-off-by: solidnerd <niclas@mietz.io>

--- a/examples/docker/rpi-whoami/Dockerfile.build
+++ b/examples/docker/rpi-whoami/Dockerfile.build
@@ -1,8 +1,11 @@
 FROM armhfbuild/golang:1.6-alpine
 
+ENV BUILD_DEPS="git make bash gcc linux-headers python musl-dev"
 RUN export OUTPUT_PATH=/output \
-    && apk add --no-cache git make bash gcc linux-headers python musl-dev  \
+    && apk add --no-cache $BUILD_DEPS  \
     && go get -d github.com/emilevauge/whoamI \
     && cd $GOPATH/src/github.com/emilevauge/whoamI \
     && CGO_ENABLED=0 go build -a --installsuffix cgo --ldflags="-s" -o whoamI \
-    && cp whoamI ${OUTPUT_PATH} 
+    && cp whoamI ${OUTPUT_PATH} \
+    && apk del $BUILD_DEPS \
+    && rm -rf $GOPATH/src/github.com/emilevauge/whoamI
