setup uuid webapp

--- a/examples/docker/rpi-tomcat-8/Dockerfile.uuid
+++ b/examples/docker/rpi-tomcat-8/Dockerfile.uuid
@@ -1,3 +1,6 @@
-FROM hypriot/rpi-alpine-scratch 
-ADD webapps/status /opt/tomcat/webapps/status
-VOLUME /opt/tomcat/webapps/status
+FROM bee42/tomcat:rpi-8
+
+ARG UUID_VERSION
+ENV UUID_VERSION ${UUID_VERSION:-0.0.1}
+
+ADD webapps/uuid /opt/tomcat/webapps/uuid
