fix: missing space

--- a/examples/docker/rpi-golang/Dockerfile
+++ b/examples/docker/rpi-golang/Dockerfile
@@ -6,7 +6,7 @@ ARG GOLANG_VERSION
 ENV GOLANG_VERSION=${GOLANG_VERSION:-1.7.3}
 
 RUN apt-get update \
- && apt-get install -y openssl--no-install-recommends openssl\
+ && apt-get install -y --no-install-recommends openssl\
  && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /usr/local/go \
@@ -14,10 +14,6 @@ RUN mkdir -p /usr/local/go \
  && wget https://storage.googleapis.com/golang/go${GOLANG_VERSION}.linux-armv6l.tar.gz \
  && tar -C /usr/local -xzf go${GOLANG_VERSION}.linux-armv6l.tar.gz \
  && rm /tmp/go${GOLANG_VERSION}.linux-armv6l.tar.gz
-
-ADD LICENSE /etc/LICENSE.golang
-
-RUN COPYDATE=`date  +'%Y'` && echo "bee42 golang" >/etc/provisioned.golang && date >>/etc/provisioned.golang && echo >>/etc/provisioned.golang && echo " Copyright ${COPYDATE} by <peter.rossbach@bee42.com> bee42 solutions gmbh" >>/etc/provisioned.golang
 
 VOLUME     [ "/go" ]
 
@@ -28,3 +24,7 @@ ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
 WORKDIR $GOPATH
 
 COPY go-wrapper /usr/local/bin/
+
+ADD LICENSE /etc/LICENSE.golang
+
+RUN COPYDATE=`date  +'%Y'` && echo "bee42 golang" >/etc/provisioned.golang && date >>/etc/provisioned.golang && echo >>/etc/provisioned.golang && echo " Copyright ${COPYDATE} by <peter.rossbach@bee42.com> bee42 solutions gmbh" >>/etc/provisioned.golang
