--- a/examples/docker/rpi-registry/Dockerfile
+++ b/examples/docker/rpi-registry/Dockerfile
@@ -1,11 +1,8 @@
-FROM armhfbuild/golang:1.6-alpine
+FROM scratch
 
-ENV REPO="docker/distribution"
+COPY output/registry /
+COPY config.yml /etc/docker/registry/config.yml
 
-RUN export OUTPUT_PATH=/output \
-    && apk add --no-cache git make bash gcc linux-headers python musl-dev  \
-    && go get -d github.com/$REPO \
-    && cd $GOPATH/src/github.com/$REPO \
-    && make binaries
-
-RUN cp src/github.com/$REPO/bin/registry $OUTPUT_PATH/ 
+VOLUME ["/var/lib/registry"]
+ENTRYPOINT ["/registry"]
+CMD ["serve", "/etc/docker/registry/config.yml"]
