--- a/examples/docker/rpi-registry/Dockerfile.build
+++ b/examples/docker/rpi-registry/Dockerfile.build
@@ -1,18 +1,13 @@
-FROM armhfbuild/golang:1.6-alpine
+FROM bee42/rpi-golang:1.7
 
-ENV DISTRIBUTION_DIR /go/src/github.com/docker/distribution
-ENV DOCKER_BUILDTAGS include_oss include_gcs
+ENV REPO=docker/distribution
 
-RUN set -ex \
-    && apk add --no-cache make git
+ENV OUTPUT_PATH=/output
 
-WORKDIR $DISTRIBUTION_DIR
-COPY . $DISTRIBUTION_DIR
-COPY config.yml /etc/docker/registry/config.yml
+RUN apt-get update && apt-get install -y --no-install-recommends git make 
 
-RUN make PREFIX=/go clean binaries
+ENV CGO_ENABLED=0 
 
-VOLUME ["/var/lib/registry"]
-EXPOSE 5000
-ENTRYPOINT ["registry"]
-CMD ["serve", "/etc/docker/registry/config.yml"]
+RUN go get -d github.com/${REPO} && cd $GOPATH/src/github.com/${REPO} && make clean binaries
+
+RUN cp -R src/github.com/${REPO}/bin/ $OUTPUT_PATH/
