Refactor rpi-whoami
Signed-off-by: solidnerd <niclas@mietz.io>

--- a/examples/docker/rpi-whoami/Dockerfile.build
+++ b/examples/docker/rpi-whoami/Dockerfile.build
@@ -1,11 +1,15 @@
-FROM armhfbuild/golang:1.6-alpine
+FROM bee42/rpi-golang:1.7
 
-ENV BUILD_DEPS="git make bash gcc linux-headers python musl-dev"
-RUN export OUTPUT_PATH=/output \
-    && apk add --no-cache $BUILD_DEPS  \
-    && go get -d github.com/emilevauge/whoamI \
-    && cd $GOPATH/src/github.com/emilevauge/whoamI \
-    && CGO_ENABLED=0 go build -a --installsuffix cgo --ldflags="-s" -o whoamI \
-    && cp whoamI ${OUTPUT_PATH} \
-    && apk del $BUILD_DEPS \
-    && rm -rf $GOPATH/src/github.com/emilevauge/whoamI
+ENV REPO=emilevauge/whoamI
+
+ENV OUTPUT_PATH=/output
+
+RUN apt-get update && apt-get install -y --no-install-recommends git make 
+
+ENV CGO_ENABLED=0 
+
+RUN go get -d github.com/${REPO} && cd $GOPATH/src/github.com/${REPO} && go build -a --installsuffix cgo --ldflags="-s" -o whoami
+
+RUN mkdir -p $OUTPUT_PATH && cp  src/github.com/${REPO}/whoami $OUTPUT_PATH/
+
+
