Update to 1.1.0 release

--- a/examples/docker/rpi-traefik/Dockerfile
+++ b/examples/docker/rpi-traefik/Dockerfile
@@ -3,7 +3,7 @@ FROM bee42/rpi-alpine
 MAINTAINER Peter Rossbach <peter.rossbach@bee42.com> @PRossbach
 
 ARG TRAEFIK_VERSION
-ENV TRAEFIK_VERSION=${TRAEFIK_VERSION:-1.1.0-rc4}
+ENV TRAEFIK_VERSION=${TRAEFIK_VERSION:-1.1.0}
 
 RUN apk update \
  && apk add openssl ca-certificates \
@@ -13,7 +13,7 @@ RUN mkdir -p /tmp/traefik \
  && cd /tmp/traefik \
  && wget https://github.com/containous/traefik/releases/download/v${TRAEFIK_VERSION}/traefik_linux-arm \
  && mv traefik_linux-arm /usr/local/bin/traefik \
- && chmod +x /usr/local/bin/traefik \ 
+ && chmod +x /usr/local/bin/traefik \
  && cd / \
  && rm -rf /tmp/traefik
 
