update to alpine 3.5

--- a/examples/docker/rpi-alpine/Dockerfile
+++ b/examples/docker/rpi-alpine/Dockerfile
@@ -1,7 +1,6 @@
-FROM hypriot/rpi-alpine-scratch
+FROM armhf/alpine:3.5
 
 RUN apk update && \
-apk upgrade && \
 apk add bash && \
 rm -rf /var/cache/apk/*
 
